[package]
name = "hull"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
categories = ["development-tools"]
documentation = "https://docs.rs/hull/"
homepage = "https://github.com/azriel91/hull"
keywords = ["build", "ci", "make", "workspace"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azriel91/hull"

[badges]
maintenance = { status = "experimental" }

[dependencies]
cargo_metadata = "0.5"
duct = "0.10"
shell-words = "0.1"
structopt = "0.2"
structopt-derive = "0.2"
which = "1.0"

[[bin]]
path = "src/main.rs"
name = "hull"
